--- a/config/crd/robot.k8s4r.io_jobs.yaml
+++ b/config/crd/robot.k8s4r.io_jobs.yaml
@@ -69,6 +69,11 @@ spec:
               JobSpec defines the desired state of Job
               Job 是核心控制单元，定义了应用程序及其配置
             properties:
+              datacenters:
+                description: Datacenters 数据中心列表（用于多数据中心部署）
+                items:
+                  type: string
+                type: array
               meta:
                 additionalProperties:
                   type: string
@@ -143,6 +148,304 @@ spec:
                           description: Sticky 是否粘性（保留数据）
                           type: boolean
                       type: object
+                    initTasks:
+                      description: |-
+                        InitTasks 初始化任务列表（类似 K8s initContainers）
+                        这些任务在主任务执行前按顺序执行
+                      items:
+                        description: TaskDefinition 定义 Task 模板（用于 Job 中）
+                        properties:
+                          artifacts:
+                            description: Artifacts 需要下载的文件
+                            items:
+                              description: TaskArtifact 任务工件
+                              properties:
+                                getterMode:
+                                  description: GetterMode 下载模式
+                                  enum:
+                                  - any
+                                  - file
+                                  - dir
+                                  type: string
+                                getterOptions:
+                                  additionalProperties:
+                                    type: string
+                                  description: GetterOptions 下载选项
+                                  type: object
+                                getterSource:
+                                  description: GetterSource 下载源（支持 http, git, s3 等）
+                                  type: string
+                                relativeDest:
+                                  description: RelativeDest 相对目标路径
+                                  type: string
+                              required:
+                              - getterSource
+                              type: object
+                            type: array
+                          config:
+                            description: Config 驱动程序配置
+                            properties:
+                              dockerConfig:
+                                description: DockerConfig 用于 docker 驱动
+                                properties:
+                                  args:
+                                    description: Args 命令参数
+                                    items:
+                                      type: string
+                                    type: array
+                                  command:
+                                    description: Command 容器启动命令
+                                    items:
+                                      type: string
+                                    type: array
+                                  image:
+                                    description: Image Docker 镜像
+                                    type: string
+                                  networkMode:
+                                    description: NetworkMode 网络模式
+                                    type: string
+                                  ports:
+                                    description: Ports 端口映射
+                                    items:
+                                      description: DockerPortMapping Docker 端口映射
+                                      properties:
+                                        hostIP:
+                                          description: HostIP 绑定的主机IP
+                                          type: string
+                                        label:
+                                          description: Label 端口标签
+                                          type: string
+                                        to:
+                                          description: To 映射到的主机端口（可选）
+                                          format: int32
+                                          type: integer
+                                        value:
+                                          description: Value 端口号
+                                          format: int32
+                                          type: integer
+                                      required:
+                                      - label
+                                      - value
+                                      type: object
+                                    type: array
+                                  volumes:
+                                    description: Volumes 卷挂载
+                                    items:
+                                      description: DockerVolumeMount Docker 卷挂载
+                                      properties:
+                                        readOnly:
+                                          description: ReadOnly 是否只读
+                                          type: boolean
+                                        source:
+                                          description: Source 主机源路径
+                                          type: string
+                                        target:
+                                          description: Target 容器内目标路径
+                                          type: string
+                                      required:
+                                      - source
+                                      - target
+                                      type: object
+                                    type: array
+                                  workDir:
+                                    description: WorkDir 工作目录
+                                    type: string
+                                required:
+                                - image
+                                type: object
+                              execConfig:
+                                description: ExecConfig 用于 exec 和 raw_exec 驱动
+                                properties:
+                                  args:
+                                    description: Args 命令参数
+                                    items:
+                                      type: string
+                                    type: array
+                                  command:
+                                    description: Command 要执行的命令
+                                    type: string
+                                required:
+                                - command
+                                type: object
+                              javaConfig:
+                                description: JavaConfig 用于 java 驱动
+                                properties:
+                                  args:
+                                    description: Args 应用程序参数
+                                    items:
+                                      type: string
+                                    type: array
+                                  class:
+                                    description: Class 主类名（如果不是可执行 JAR）
+                                    type: string
+                                  classpath:
+                                    description: ClassPath 类路径
+                                    items:
+                                      type: string
+                                    type: array
+                                  jarPath:
+                                    description: JarPath JAR 文件路径
+                                    type: string
+                                  jvmOptions:
+                                    description: JvmOptions JVM 选项
+                                    items:
+                                      type: string
+                                    type: array
+                                required:
+                                - jarPath
+                                type: object
+                            type: object
+                          daemon:
+                            description: |-
+                              Daemon 是否为守护进程模式（用于 initTasks）
+                              当设置为 true 时，任务启动后不等待其完成即继续执行后续任务
+                              主要用于启动长期运行的后台服务（如 SPIRE Agent、Envoy 等）
+                            type: boolean
+                          driver:
+                            description: Driver 驱动程序类型
+                            enum:
+                            - exec
+                            - docker
+                            - java
+                            - raw_exec
+                            type: string
+                          env:
+                            additionalProperties:
+                              type: string
+                            description: Env 环境变量
+                            type: object
+                          killTimeout:
+                            description: KillTimeout 终止超时
+                            type: string
+                          name:
+                            description: Name 任务名称
+                            type: string
+                          resources:
+                            description: Resources 资源需求
+                            properties:
+                              cpu:
+                                anyOf:
+                                - type: integer
+                                - type: string
+                                description: CPU CPU 资源请求和限制（如 "100m", "0.5"）
+                                pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                                x-kubernetes-int-or-string: true
+                              disk:
+                                anyOf:
+                                - type: integer
+                                - type: string
+                                description: Disk 磁盘空间需求
+                                pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                                x-kubernetes-int-or-string: true
+                              iops:
+                                description: IOPS 磁盘 IOPS 需求
+                                format: int64
+                                type: integer
+                              memory:
+                                anyOf:
+                                - type: integer
+                                - type: string
+                                description: Memory 内存资源请求和限制（如 "128Mi", "1Gi"）
+                                pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
+                                x-kubernetes-int-or-string: true
+                              networks:
+                                description: Networks 网络资源需求
+                                items:
+                                  description: TaskNetworkResource 网络资源定义
+                                  properties:
+                                    dynamicPorts:
+                                      description: DynamicPorts 动态端口
+                                      items:
+                                        description: TaskPort 端口定义
+                                        properties:
+                                          label:
+                                            description: Label 端口标签
+                                            type: string
+                                          to:
+                                            description: To 映射到的端口（对于动态端口）
+                                            format: int32
+                                            type: integer
+                                          value:
+                                            description: Value 端口值（对于保留端口）
+                                            format: int32
+                                            type: integer
+                                        required:
+                                        - label
+                                        type: object
+                                      type: array
+                                    mbits:
+                                      description: MBits 网络带宽需求 (Mbps)
+                                      format: int32
+                                      type: integer
+                                    reservedPorts:
+                                      description: ReservedPorts 保留端口
+                                      items:
+                                        description: TaskPort 端口定义
+                                        properties:
+                                          label:
+                                            description: Label 端口标签
+                                            type: string
+                                          to:
+                                            description: To 映射到的端口（对于动态端口）
+                                            format: int32
+                                            type: integer
+                                          value:
+                                            description: Value 端口值（对于保留端口）
+                                            format: int32
+                                            type: integer
+                                        required:
+                                        - label
+                                        type: object
+                                      type: array
+                                  type: object
+                                type: array
+                            type: object
+                          templates:
+                            description: Templates 配置模板
+                            items:
+                              description: TaskTemplate 配置模板
+                              properties:
+                                changeMode:
+                                  description: ChangeMode 变更模式
+                                  enum:
+                                  - restart
+                                  - noop
+                                  - signal
+                                  type: string
+                                changeSignal:
+                                  description: ChangeSignal 变更信号
+                                  type: string
+                                destPath:
+                                  description: DestPath 目标文件路径
+                                  type: string
+                                embeddedTmpl:
+                                  description: EmbeddedTmpl 内嵌模板内容
+                                  type: string
+                                leftDelim:
+                                  description: LeftDelim 左分隔符
+                                  type: string
+                                perms:
+                                  description: Perms 文件权限
+                                  type: string
+                                rightDelim:
+                                  description: RightDelim 右分隔符
+                                  type: string
+                                sourcePath:
+                                  description: SourcePath 模板源路径
+                                  type: string
+                              required:
+                              - destPath
+                              type: object
+                            type: array
+                          user:
+                            description: User 运行用户
+                            type: string
+                        required:
+                        - config
+                        - driver
+                        - name
+                        type: object
+                      type: array
                     meta:
                       additionalProperties:
                         type: string
@@ -375,7 +678,7 @@ spec:
                                 anyOf:
                                 - type: integer
                                 - type: string
-                                description: CPU CPU 资源请求和限制
+                                description: CPU CPU 资源请求和限制（如 "100m", "0.5"）
                                 pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
                                 x-kubernetes-int-or-string: true
                               disk:
@@ -393,7 +696,7 @@ spec:
                                 anyOf:
                                 - type: integer
                                 - type: string
-                                description: Memory 内存资源请求和限制
+                                description: Memory 内存资源请求和限制（如 "128Mi", "1Gi"）
                                 pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
                                 x-kubernetes-int-or-string: true
                               networks:
